apps/bux-wallet/frontend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bux-wallet-frontend-demo
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
spec:
  tls:
    - hosts:
        - bux-wallet.kschw.com
      secretName: bux-wallet-tls
  rules:
    - host: bux-wallet.kschw.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bux-wallet-frontend-demo
                port:
                  name: web
